break out homepage footer info into separate region/block - add some spacing to elements - fix modal close button styling mashup

--- a/app/View/Themed/Accelerator/webroot/css/sass/screen.scss
+++ b/app/View/Themed/Accelerator/webroot/css/sass/screen.scss
@@ -566,6 +566,7 @@ article {
 aside.miscellaneous {
   @include span-columns(12 omega,12);
   clear: both;
+  margin-bottom: 1em;
 }
 
 div.main {
@@ -938,6 +939,7 @@ section.mentors {
   ul {
     @extend .container;
     margin-bottom: 0;
+    padding: .75em 0;
     li {
       @include span-columns(4,12);
       @include nth-omega(3n);
